@@ -1,4 +1,4 @@
-# $NetBSD: GENERIC3X,v 1.94 2006/11/11 18:47:12 jmmv Exp $
+# $NetBSD: GENERIC3X,v 1.94.2.1 2007/06/06 19:21:53 bouyer Exp $
 
 # GENERIC Sun3X (3/80, 3/470)
 # Supports root on: ie0, le0, sd*, ...
@@ -7,7 +7,7 @@ include 	"arch/sun3/conf/std.sun3x"
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident		"GENERIC3X-$Revision: 1.94 $"
+#ident		"GENERIC3X-$Revision: 1.94.2.1 $"
 
 # Machines to be supported by this kernel
 #options 	FPU_EMULATE	# XXX - Ever needed?
@@ -262,6 +262,7 @@ pseudo-device	gif			# IPv[46] over IPv[46] tunnel (RFC1933)
 pseudo-device	stf			# 6to4 IPv6 over IPv4 encapsulation
 pseudo-device	vlan			# IEEE 802.1q encapsulation
 pseudo-device	bridge			# simple inter-network bridging
+pseudo-device	agr			# IEEE 802.3ad link aggregation
 #options 	BRIDGE_IPF		# bridge uses IP/IPv6 pfil hooks too
 pseudo-device	rnd			# /dev/random and in-kernel generator
 
